--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
   height: 80px;
   width: 100px;
   border-radius: 50%;
-  background-color: green;
+  background-color: red;
 }
 
 #circle3 {
@@ -53,6 +53,26 @@
   width: 100px;
   border-radius: 50%;
   background-color: red;
+}
+
+#level1 {
+  font-size: 22px;
+  text-align: center;
+  margin-top: 25px;
+}
+
+#level2 {
+  font-size: 22px;
+  text-align: center;
+  margin-top: 25px;
+  display: none;
+}
+
+#level3 {
+  font-size: 22px;
+  text-align: center;
+  margin-top: 25px;
+  display: none;
 }
 
 button {
